syntax = "proto3";

package user.v1;

option go_package = "github.com/anatoly_dev/go-users/api/v1;userv1";

import "google/protobuf/timestamp.proto";

service UserService {
  rpc Register(RegisterRequest) returns (RegisterResponse) {}

  rpc Login(LoginRequest) returns (LoginResponse) {}

  rpc GetUser(GetUserRequest) returns (GetUserResponse) {}

  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {}

  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {}

  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse) {}
}

enum UserRole {
  USER_ROLE_UNSPECIFIED = 0;
  USER_ROLE_USER = 1;
  USER_ROLE_ADMIN = 2;
}

message User {
  string id = 1;
  string email = 2;
  string first_name = 3;
  string last_name = 4;
  UserRole role = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}


message RegisterRequest {
  string email = 1;
  string password = 2;
  string first_name = 3;
  string last_name = 4;
  UserRole role = 5;
}

message RegisterResponse {
  User user = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  User user = 1;
  string token = 2;
}

message GetUserRequest {
  string user_id = 1;
}

message GetUserResponse {
  User user = 1;
}

message UpdateUserRequest {
  string user_id = 1;
  string first_name = 2;
  string last_name = 3;
}

message UpdateUserResponse {
  User user = 1;
}

message DeleteUserRequest {
  string user_id = 1;
}

message DeleteUserResponse {}

message ListUsersRequest {
  int32 offset = 1;
  int32 limit = 2;
}

message ListUsersResponse {
  repeated User users = 1;
} 